@@ -1,3 +1,12 @@
+2008-02-04  Aaron Bockover  <abock@gnome.org>
+
+	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceView.cs: Check
+	to see if the actor TreeIter is valid in notify_stage.ActorStep - expire
+	the actor if it is not
+
+	* src/Core/Hyena.Gui/Hyena.Gui.Theatrics/Stage.cs: Allow the step handler
+	to expire the actor by returning false
+
 2008-02-03  Aaron Bockover  <abock@gnome.org>
 
 	This commit adds Drag and Drop support from the track list to the source
